--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"> </script>
+
 </head>
-<body>
-    
-</body>
+    <body>
+        <p>oi</p>
+
+
+    </body>
 </html>
